[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "executing"
dynamic = ["version"]
description = "Get the currently executing AST node of a frame, and other information"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
	{ name = "Alex Hall", email = "alex.mojaki@gmail.com" },
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/alexmojaki/executing"
Repository = "https://github.com/alexmojaki/executing"

[project.optional-dependencies]
tests = [
    "pysource-minimize>=0.10.1",
	"asttokens>=2.1.0",
	"ipython",
	"pytest",
	"coverage[toml]",
	"coverage-enable-subprocess",
	"littleutils",
	"rich; python_version >= '3.11'",
]

[tool.setuptools]
packages = ["executing"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
executing = ["py.typed"]

[tool.setuptools_scm]
write_to = "executing/version.py"
write_to_template = "__version__ = '{version}'"

[tool.mypy]
show_error_codes = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "astroid"
ignore_missing_imports = true

[tool.pytest.ini_options]
python_functions = "test_"

[tool.coverage.run]
relative_files = true
include = ["executing/executing.py"]
parallel = true
branch = true
