[metadata]
name = executing
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Get the currently executing AST node of a frame, and other information
url = https://github.com/alexmojaki/executing
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = executing
zip_safe = False
include_package_data = True
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
