[metadata]
name = executing
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Get the currently executing AST node of a frame, and other information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/executing
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = executing
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]


[options.extras_require]
tests=
    asttokens
    pytest
    littleutils
    rich; python_version >='3.11'

[options.package_data]
executing = py.typed

[coverage:run]
relative_files = True

[bdist_wheel]
universal=1
