[metadata]
name = executing
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Get the currently executing AST node of a frame, and other information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/executing
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = executing
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
python_requires = >=3.5

[options.extras_require]
tests=
    asttokens>=2.1.0
    ipython
    pytest
    coverage
    coverage-enable-subprocess
    littleutils
    rich; python_version >='3.11'

[options.package_data]
executing = py.typed

[coverage:run]
relative_files = True
include = executing/executing.py
parallel = true
branch = true

[bdist_wheel]
universal=1
